# overpass_poc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.sh  dev.sh  get-bitcoind.sh  later.md  run-bitcoind.sh  rust-toolchain.toml  setup.sh
docs/: blueprint.md
frontend/: index.html  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  OverpassChannel.ts  TestInterface.tsx  index.css  index.ts  main.tsx  runBenchmark.ts  types.ts
frontend/src/components/: ChannelManager.tsx  ChannelTest.tsx  Wallet.txt
frontend/src/demo/: bench.ts  htlc-demo.ts  payment-channel-demo.ts  run-demo.ts  wallet-demo.ts
frontend/src/error/: client_errors.ts
frontend/src/hooks/: useChannel.ts  useStorage.ts
frontend/src/lib/: channel.ts
frontend/src/network/: index.ts  network-client.ts
frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
frontend/src/state/: index.ts  state-transition-manager.ts  wallet.ts
frontend/src/tests/: htlcDemo.ts
frontend/src/types/: cell_builder.ts  dag_boc.ts  ops.ts  state_boc.ts
frontend/src/ui/: index.ts
frontend/src/ui/components/: ChannelManager.tsx  ChannelTest.tsx  ClientApp.tsx  index.ts
frontend/src/utils/: hash-utils.ts
frontend/src/wasm/: bridge.ts  index.ts  overpass_wasm.d.ts  overpass_wasm.js  overpass_wasm_bg.wasm  overpass_wasm_bg.wasm.d.ts  types.ts  wasm-wrapper.ts
frontend/src/wrappers/: htlc.ts  payment.ts  state.ts  wallet.ts
log/: log.txt
overpass_core/: Cargo.toml  config.toml
overpass_core/log/: log.txt
overpass_core/migrations/: test.sql
overpass_core/src/: lib.rs  main.rs  rng.rs
overpass_core/src/api_ovp/: http.rs  mod.rs
overpass_core/src/bitcoin/: bitcoin.conf  bitcoin_transaction.rs  bitcoin_types.rs  client.rs  mod.rs  rpc_client.rs  scripts.rs  stealth_addresses.rs  wallet.rs  zkp_handler.rs
overpass_core/src/circuit/: bitcoin_bridge_circuit.rs  channel_circuit.rs  common_circuit_types.rs  global_merkle_circuit.rs  mod.rs  sparse_merkle_tree_circuit.rs  transfer_circuit.rs  wallet_circuit.rs
overpass_core/src/contracts/: htlc.rs  mod.rs  payment.rs  state.rs  wallet.rs
overpass_core/src/error/: client_errors.rs  mod.rs
overpass_core/src/logging/: config.rs  logger.rs  mod.rs
overpass_core/src/network/: bitcoin_regtest.rs  mod.rs
overpass_core/src/services/: mod.rs  overpass.rs  overpass_db.rs
overpass_core/src/smt/: channel_sparse_merkle_tree.rs  global_sparse_merkle_tree.rs  mod.rs  wallet_sparse_merkle_tree.rs
overpass_core/src/state/: bitcoin_state.rs  channel_state.rs  coordinator.rs  global_state.rs  mod.rs  wallet_state.rs
overpass_core/src/storage_node/: mod.rs  node.rs
overpass_core/src/types/: cell_builder.rs  dag_boc.rs  mod.rs  ops.rs  state_boc.rs
overpass_core/src/utils/: convert.rs  json.rs  mod.rs
overpass_core/src/zkp/: bitcoin_ephemeral_state.rs  channel.rs  compressed_transaction.rs  global_root_contract.rs  helpers.rs  mobile_optimized_storage.rs  mod.rs  pedersen_parameters.rs  recursion.rs  state_proof.rs  state_transition.rs  tree.rs  wallet_contract.rs
overpass_core/src/zkp/NEW/: Cargo.toml  bitcoin.conf  bitcoin_ephemeral_state.rs  channel.rs  client_errors.rs  global_root_contract.rs  helpers.rs  lib.rs  main.rs  mobile_optimized_storage.rs  mod.rs  pedersen_parameters.rs  scripts.rs  stealth_addresses.rs  tree.rs  wallet_contract.rs
overpass_core/src/zkp/NEW/tests/: e2e_integration_test.rs
overpass_core/src/zkp/helpers/: bitcoind_path.rs  commitments.rs  merkle.rs  mod.rs  state.rs  transactions.rs
overpass_core/tests/: e2e_codegen.rs  e2e_integration_test.rs  e2e_p2tr_test.rs  e2e_regtest_client.rs  midas_test.rs  zkp_state_transition_test.rs
overpass_wasm/: Cargo.toml
overpass_wasm/src/: channel.rs  lib.rs
overpass_wasm/src/error/: client_errors.rs  mod.rs
overpass_wasm/src/storage/: mod.rs
overpass_wasm/src/types/: cell_builder.rs  dag_boc.rs  generate_keypair.rs  mod.rs  ops.rs  state_boc.rs
overpass_wasm/tests/: my_test.rs
src/: channel.rs  commitments.rs  error.rs  example.rs  global_root_contract.rs  lib.rs  main.rs  rng.rs  state.rs  state_transition.rs  tree.rs  types.rs  wallet.rs  your-file.ts
src/bitcoin/: bitcoin_transaction.rs  bitcoin_types.rs  client.rs  rpc_client.rs  wallet.rs  zkp_handler.rs
src/contracts/: htlc.rs  payment.rs  state.rs  wallet.rs
src/error/: client_errors.rs  mod.rs
src/logging/: logger.rs  mod.rs
src/network/: bitcoin_regtest.rs  mod.rs
src/services/: mod.rs
src/storage_node/: mod.rs  node.rs
src/types/: cell_builder.rs  ops.rs  state_boc.rs
src/utils/: convert.rs
src/zkp/: channel.rs  compressed_transaction.rs  mobile_optimized_storage.rs  mod.rs  state_transition.rs  tree.rs  wallet.rs  wallet_contract.rs
src/zkp/helpers/: commitments.rs  merkle.rs  mod.rs  state.rs  transactions.rs
tests/: midas_test.rs
