[package]
name = "overpass_poc"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
curve25519-dalek = "4.1.0"
hex = "0.4.3"
midas = { package = "bitcoin-rpc-midas", version = "0.1.6" }
plonky2 = "1.0.0"
plonky2_field = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
