[package]
name = "overpass_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = "1.0.0"
miniscript = "12.3.0"
plonky2 = "1.0.0"
plonky2_field = "1.0.0"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4.0"
bincode = "1.3.3"
base64 = "0.21.0"
js-sys = "0.3"
sled = "0.34"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
console_error_panic_hook = "0.1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
serde-wasm-bindgen = "0.6.5"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
tower = "0.4"
async-trait = "0.1"
toml = "0.7.6"
log = "0.4"
sha2 = "0.10.6"
lru = "0.12.0"
curve25519-dalek = "4.1.0"
hex = "0.4.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# Bitcoin-related Dependencies
corepc-node = { git = "https://github.com/rust-bitcoin/corepc", package = "corepc-node", features = [
    "28_0",
] }

bitcoin_hashes = { version = "0.13.0", features = ["serde"] }
bitcoin = { version = "0.32.5", features = ["rand", "serde"] }
bitcoincore-rpc = "0.19.0"
secp256k1 = { version = "0.30.0", features = ["serde", "global-context"] }
bip39 = "2.0.0"
bitcoin_hd = "0.10.2"
base58check = { version = "0.1.0", default-features = false }
bech32 = "0.9.1"
chacha20poly1305 = "0.10.1"
