[package]
name = "overpass_core"
version = "0.1.0"
edition = "2021"

[dependencies]
miniscript = "12.3.0"
plonky2 = "1.0.0"
plonky2_field = "1.0.0"
rand = "0.8.5"
getrandom = "0.2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
js-sys = "0.3"
sled = "0.34"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full", "macros"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
serde-wasm-bindgen = "0.6.5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
toml = "0.7.6"
log = "0.4"
sha2 = "0.10.6"
lru = "0.12.0"
curve25519-dalek = "4.1.0"
hex = "0.4.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# Bitcoin-related Dependencies
corepc-node = { git = "https://github.com/rust-bitcoin/corepc", package = "corepc-node", features = [
    "28_0",
] }

midas = { package = "bitcoin-rpc-midas", version = "0.1.5" }

bech32 = "0.11.0"
bitcoin = { version = "0.32.6", features = ["rand", "serde"] }
bitcoincore-rpc = "0.19.0"
secp256k1 = { version = "0.27.0", features = ["serde", "global-context"] }
bip39 = "2.0.0"
chacha20poly1305 = "0.10.1"
