[package]
name = "overpass_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde-json-wasm = "1.0.1"
sha2 = "0.10.6"
wasm-bindgen-futures = "0.4"
bincode = "1.3.3"
anyhow = "1.0"
serde_json = "1.0.87"
wee_alloc = "0.4.5"


[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4" # Added for hex encoding in SerializableTransaction

