[package]
name = "overpass_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde-json-wasm = "1.0.1"
sha2 = "0.10.6"
wasm-bindgen-futures = "0.4"
bincode = "1.3.3"
anyhow = "1.0"
rand = "0.8"
base64 = "0.22.1"
serde_json = "1.0.87"
wee_alloc = "0.4.2"
ed25519-dalek = "2.1.1"
aes-gcm = "0.10.3"
thiserror = "2.0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4" # Added for hex encoding in SerializableTransaction

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

